Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-26749

Extra newlines at beginning of copied backtrace

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: P3: Somewhat important P3: Somewhat important
    • Qt Creator 16.0.0-beta2
    • Qt Creator 5.0.2, Qt Creator 17.0.0
    • Debugger
    • 9261b3d63 (16.0)

      Copying the contents of a backtrace results in there being two empty lines at beginning:

                                                                                                                                    
                                                                                                                                    
      1  __GI_raise                                                                raise.c                      50   0x7ffff633918b 
      2  __GI_abort                                                                abort.c                      79   0x7ffff6318859 
      3  __libc_message                                                            libc_fatal.c                 155  0x7ffff63833ee 
      4  malloc_printerr                                                           malloc.c                     5347 0x7ffff638b47c 
      5  malloc_consolidate                                                        malloc.c                     4477 0x7ffff638bc58 
      6  _int_malloc                                                               malloc.c                     3699 0x7ffff638de03 
      7  __GI___libc_malloc                                                        malloc.c                     3066 0x7ffff6390419 
      8  QFiniteStack<QExplicitlySharedDataPointer<QQmlAbstractBinding>>::allocate qfinitestack_p.h             165  0x7ffff7305170 
      9  QQmlObjectCreator::QQmlObjectCreator                                      qqmlobjectcreator.cpp        82   0x7ffff72f9ff3 
      10 QQmlComponentPrivate::beginCreate                                         qqmlcomponent.cpp            946  0x7ffff7262a5d 
      11 QQmlComponent::beginCreate                                                qqmlcomponent.cpp            899  0x7ffff7262782 
      12 QQmlComponent::createObject                                               qqmlcomponent.cpp            1477 0x7ffff726476d 
      13 QQmlComponent::qt_static_metacall                                         moc_qqmlcomponent.cpp        163  0x7ffff7266048 
      14 QQmlComponent::qt_metacall                                                moc_qqmlcomponent.cpp        231  0x7ffff7266307 
      15 QMetaObject::metacall                                                     qmetaobject.cpp              324  0x7ffff6a8984d 
      16 QQmlObjectOrGadget::metacall                                              qqmlobjectorgadget.cpp       51   0x7ffff72b83c8 
      17 QV4::QObjectMethod::callInternal                                          qv4qobjectwrapper.cpp        2122 0x7ffff70f859d 
      18 QV4::QObjectMethod::virtualCall                                           qv4qobjectwrapper.cpp        2065 0x7ffff70f8078 
      19 QV4::FunctionObject::call                                                 qv4functionobject_p.h        202  0x7ffff702aa2f 
      20 QV4::Moth::VME::interpret                                                 qv4vme_moth.cpp              757  0x7ffff7127d7d 
      21 QV4::Moth::VME::exec                                                      qv4vme_moth.cpp              466  0x7ffff71239db 
      22 QV4::Function::call                                                       qv4function.cpp              69   0x7ffff7093f30 
      23 QQmlJavaScriptExpression::evaluate                                        qqmljavascriptexpression.cpp 212  0x7ffff72dd0e2 
      24 QQmlBoundSignalExpression::evaluate                                       qqmlboundsignal.cpp          224  0x7ffff727322d 
      25 QQmlBoundSignal_callback                                                  qqmlboundsignal.cpp          361  0x7ffff72738b1 
      26 QQmlNotifier::emitNotify                                                  qqmlnotifier.cpp             104  0x7ffff72b7802 
      27 QQmlData::signalEmitted                                                   qqmlengine.cpp               834  0x7ffff7244201 
      28 doActivate<false>                                                         qobject.cpp                  3815 0x7ffff6ad7224 
      29 QMetaObject::activate                                                     qobject.cpp                  3983 0x7ffff6ad061d 
      30 QQuickComboBox::currentIndexChanged                                       moc_qquickcombobox_p.cpp     802  0x7fffe86abf87 
      31 QQuickComboBoxPrivate::setCurrentIndex                                    qquickcombobox.cpp           552  0x7fffe85fe9a2 
      32 QQuickComboBox::setCurrentIndex                                           qquickcombobox.cpp           1002 0x7fffe8600694 
      33 QQuickComboBoxPrivate::hidePopup                                          qquickcombobox.cpp           326  0x7fffe85fd9d5 
      34 QQuickComboBox::keyReleaseEvent                                           qquickcombobox.cpp           1874 0x7fffe86028c3 
      35 QQuickItemPrivate::deliverKeyEvent                                        qquickitem.cpp               5235 0x7fffe948245c 
      36 QQuickItem::event                                                         qquickitem.cpp               8243 0x7fffe9489fb0 
      37 QQuickComboBox::event                                                     qquickcombobox.cpp           1910 0x7fffe8602a53 
      38 QCoreApplicationPrivate::notify_helper                                    qcoreapplication.cpp         1225 0x7ffff6a7f3b0 
      39 doNotify                                                                  qcoreapplication.cpp         1154 0x7ffff6a7ef7d 
      40 QCoreApplication::notify                                                  qcoreapplication.cpp         1140 0x7ffff6a7eedc 
      41 QGuiApplication::notify                                                   qguiapplication.cpp          1938 0x7ffff778a61d 
      42 QCoreApplication::notifyInternal2                                         qcoreapplication.cpp         1064 0x7ffff6a7edf1 
      43 QCoreApplication::sendEvent                                               qcoreapplication.cpp         1462 0x7ffff6a7f88e 
      44 QQuickWindowPrivate::deliverKeyEvent                                      qquickwindow.cpp             1940 0x7fffe94b33ca 
      45 QQuickWindow::keyReleaseEvent                                             qquickwindow.cpp             1925 0x7fffe94b3279 
      46 QWindow::event                                                            qwindow.cpp                  2385 0x7ffff77a18ae 
      47 QQuickWindow::event                                                       qquickwindow.cpp             1907 0x7fffe94b3124 
      48 QCoreApplicationPrivate::notify_helper                                    qcoreapplication.cpp         1225 0x7ffff6a7f3b0 
      49 doNotify                                                                  qcoreapplication.cpp         1154 0x7ffff6a7ef7d 
      50 QCoreApplication::notify                                                  qcoreapplication.cpp         1140 0x7ffff6a7eedc 
      51 QGuiApplication::notify                                                   qguiapplication.cpp          1938 0x7ffff778a61d 
      52 QCoreApplication::notifyInternal2                                         qcoreapplication.cpp         1064 0x7ffff6a7edf1 
      53 QCoreApplication::sendSpontaneousEvent                                    qcoreapplication.cpp         1474 0x7ffff6a7f8cc 
      54 QGuiApplicationPrivate::processKeyEvent                                   qguiapplication.cpp          2417 0x7ffff778c194 
      55 QGuiApplicationPrivate::processWindowSystemEvent                          qguiapplication.cpp          2011 0x7ffff778aa3e 
      56 QWindowSystemInterface::sendWindowSystemEvents                            qwindowsysteminterface.cpp   1169 0x7ffff77672b7 
      57 xcbSourceDispatch                                                         qxcbeventdispatcher.cpp      105  0x7ffff2dd027e 
      58 g_main_context_dispatch                                                                                     0x7ffff569b17d 
      59 ??                                                                                                          0x7ffff569b400 
      60 g_main_context_iteration                                                                                    0x7ffff569b4a3 
      61 QEventDispatcherGlib::processEvents                                       qeventdispatcher_glib.cpp    423  0x7ffff6b1e939 
      62 QXcbGlibEventDispatcher::processEvents                                    qxcbeventdispatcher.cpp      143  0x7ffff2dd04c4 
      63 QEventLoop::processEvents                                                 qeventloop.cpp               142  0x7ffff6a7b28f 
      64 QEventLoop::exec                                                          qeventloop.cpp               235  0x7ffff6a7b5f5 
      65 QCoreApplication::exec                                                    qcoreapplication.cpp         1375 0x7ffff6a7f6c0 
      66 QGuiApplication::exec                                                     qguiapplication.cpp          1870 0x7ffff778a42e 
      67 main                                                                      main.cpp                     22   0x5555555567be 
      
      Qt Creator 5.0.2
      Based on Qt 5.15.2 (GCC 7.3.1 20180303 (Red Hat 7.3.1-5), 64 bit)
      Built on Sep 30 2021 01:23:58
      From revision 67c0104b8e
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            hjk hjk
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes