Debugger: Drop empty lines at begin of copied backtrace

Fixes: QTCREATORBUG-26749
Change-Id: I7ecd85e45918f2fc70ad76fc3b977045a893f1d5
Reviewed-by: David Schulz <david.schulz@qt.io>